--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,10 @@ dependencies:
   animator: ^2.0.1
   nearby_connections: ^1.1.1+1
   flutter_svg: ^0.17.4
+  file_picker: ^1.12.0
+  path_provider: ^1.6.11
+  liquid_progress_indicator: ^0.3.2
+  shared_preferences: ^0.5.8
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
