--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
   path_provider: ^1.6.11
   liquid_progress_indicator: ^0.3.2
   shared_preferences: ^0.5.8
+  circle_list: ^1.0.2
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
