--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,12 +26,12 @@ dependencies:
   pimp_my_button: ^1.0.0
   animator: ^2.0.1
   nearby_connections: ^1.1.1+1
-  flutter_svg: ^0.17.4
   file_picker: ^1.12.0
   path_provider: ^1.6.11
   liquid_progress_indicator: ^0.3.2
   shared_preferences: ^0.5.8
   circle_list: ^1.0.2
+  provider: ^4.3.2
 
 
   # The following adds the Cupertino Icons font to your application.
