--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   shared_preferences: ^0.5.8
   circle_list: ^1.0.2
   provider: ^4.3.2
+  open_file: ^3.0.1
 
 
   # The following adds the Cupertino Icons font to your application.
