--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,7 @@ dependencies:
   circle_list: ^1.0.2
   provider: ^4.3.2
   open_file: ^3.0.1
-
+  intro_views_flutter: ^2.8.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
