--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,13 +27,13 @@ dependencies:
   animator: ^2.0.1
   nearby_connections: ^1.1.1+1
   file_picker: ^1.12.0
-  path_provider: ^1.6.11
   liquid_progress_indicator: ^0.3.2
   shared_preferences: ^0.5.8
   circle_list: ^1.0.2
   provider: ^4.3.2
   open_file: ^3.0.1
   intro_views_flutter: ^2.8.1
+  auto_size_text: ^2.1.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
