done for sdk 29

--- a/android/key.properties
+++ b/android/key.properties
@@ -1,4 +1,4 @@
 storePassword=tahskajaitly2446
 keyPassword=tahskajaitly1810
 keyAlias=key
-storeFile="C:\Users\Akshat Jaitly\key.jks"
+storeFile=C:/Users/Akshat Jaitly/key.jks
